bug#24303  Wrong result for UPDATE IGNORE for NDB table: Read all fields for UPDATE IGNORE with pk